receiver, common tools, tests and samples

--- a/srcs/lol1/Dockerfile
+++ b/srcs/lol1/Dockerfile
@@ -3,5 +3,6 @@ COPY lol.sh /var/www/
 RUN chmod +x /var/www/lol.sh
 RUN apt-get update
 RUN apt-get install -y netcat
+EXPOSE 9090
 ENTRYPOINT [ "/var/www/lol.sh" ]
 # CMD ["bash", "/var/www/lol.sh"]
