--- a/srcs/.env
+++ b/srcs/.env
@@ -2,3 +2,7 @@
 
 DOMAIN_NAME=transcendance.com   # remember to setup routing table
 LOGGER_PORT=8080
+
+# postgresql variables
+POSTGRES_PASSOWRD=pwd_postgre
+POSTGRES_USER=databaser
