--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,6 +7,7 @@
 
 # notices:
 #   - EVERY service MUST depend on the logger
+#   - EVERY service CAN access common_tools
 
 
 
@@ -55,29 +56,61 @@ volumes:
       o: bind
       device: /home/leonardo/data/logger
       type: none
+  common_tools:
+    driver: local
+    name: ct
+    driver_opts:
+      o: bind
+      device: ./srcs/common_tools/tools
+      type: none
 
 
 services:
 
-  logger:                                             # logger service
-    build: ./logger
-    restart: always
-    volumes:
-      - logger_db:/var/www/log
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - app-network
-    env_file:
-      - .env
+  # logger:                                             # logger service
+  #   build: ./logger
+  #   restart: always
+  #   volumes:
+  #     - logger_db:/var/www/log
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - common_tools:/var/common
+  #   networks:
+  #     - app-network
+  #   env_file:
+  #     - .env
 
   lolservice1:                                        # test service. Sends a short message to logger
     build: ./lol1
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - logger
+      - common_tools:/var/www/common
+    # depends_on:
+    #   - logger
     networks:
       - app-network
     env_file:
       - .env
+    ports:
+      - "9090:9090"
+
+  receiver:                                        # test service. Sends a short message to logger
+    build: ./receiver
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - common_tools:/var/www/common
+    # depends_on:
+      # - logger
+    networks:
+      - app-network
+    env_file:
+      - .env
+    ports:
+      - "8080:8080"
+
+  # database:
+  #   image: postgres
+  #   restart: always
+  #   env_file:
+  #     - .env
