--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -79,22 +79,8 @@ services:
   #   env_file:
   #     - .env
 
-  lolservice1:                                        # test service. Sends a short message to logger
-    build: ./lol1
-    restart: always
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - common_tools:/var/www/common
-    # depends_on:
-    #   - logger
-    networks:
-      - app-network
-    env_file:
-      - .env
-    ports:
-      - "9090:9090"
 
-  receiver:                                        # test service. Sends a short message to logger
+  receiver:                                             # net open service. Creates gatewayss
     build: ./receiver
     restart: always
     volumes:
@@ -108,6 +94,21 @@ services:
       - .env
     ports:
       - "8080:8080"
+
+  request_manager:
+    build: ./request_manager
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - common_tools:/var/www/common
+    depends_on:
+      - receiver
+    networks:
+      - app-network
+    env_file:
+      - .env
+    ports:
+      - "9000:9000"
 
   # database:
   #   image: postgres
