--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,13 @@
 # contains all env variables (MUST BE REF TO ALL LOGINS)
 
 DOMAIN_NAME=transcendance.com   # remember to setup routing table
-LOGGER_PORT=8080
 
 # postgresql variables
-POSTGRES_PASSOWRD=pwd_postgre
+POSTGRES_PASSWORD=pwd_postgres
 POSTGRES_USER=databaser
+
+# all exposed ports MUST be expressed here, even if the env variable is not used
+PORT_RECEIVER=8008
+PORT_LOGGER=8000
+PORT_REQ_MANAGER=9000
+PORT_POSTGRES=5433
