--- a/srcs/request_manager/Dockerfile
+++ b/srcs/request_manager/Dockerfile
@@ -1,5 +1,6 @@
 FROM ruby:3.3
 COPY main.rb /var/www/
 RUN chmod +x /var/www/main.rb
+RUN gem install pg
 EXPOSE 9000
 CMD [ "ruby", "/var/www/main.rb" ]
