--- a/srcs/auth/authentication/Gemfile
+++ b/srcs/auth/authentication/Gemfile
@@ -5,7 +5,9 @@ gem 'oauth2'
 gem 'dotenv'
 gem 'rack'
 gem 'pg'
+gem 'cgi'
 gem 'webrick'
 gem 'colorize'
 gem 'bundler'
 gem 'did_you_mean', '~> 1.0'
+gem 'erb'
