game_manager back, user_manager OK, history_manager OK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,3 +163,39 @@ services:
       - "7080:7080"
     entrypoint: /var/www/init.sh
     working_dir: /var/www
+
+  game_manager:
+    image: ruby:latest
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./srcs/common_tools/tools:/var/common
+      - ./srcs/game_manager:/var/www
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+    env_file:
+      - .env
+    ports:
+      - "7878:7878"
+    entrypoint: /var/www/init.sh
+    working_dir: /var/www
+
+  history_manager:
+    image: ruby:latest
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./srcs/common_tools/tools:/var/common
+      - ./srcs/history_manager:/var/www
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+    env_file:
+      - .env
+    ports:
+      - "7701:7701"
+    entrypoint: /var/www/init.sh
+    working_dir: /var/www
